# Figmaker

./: .gitignore  Figmaker.py  README.md  pyproject.toml  requirements.txt  start.bat
.github/: copilot-instructions.md
examples/: README.md  image_panels.yaml  scientific_figure.yaml
figmaker/: __init__.py  cli.py  layout.py  loader.py  recipes.py  styles.py  transforms.py
figmaker/plots/: __init__.py  image_panel.py
tests/: test_figmaker_core.py  test_modular_architecture.py
